kubernetes/battle-rails/reverse-proxy-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: reverse-proxy-deployment
  namespace: battle-rails
  labels:
    app: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
      - name: reverse-proxy
        image: nginx:1.13-alpine
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: reverse-proxy-configmap
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: reverse-proxy-configmap
        configMap:
          name: reverse-proxy-configmap
